@@ -1,3 +1,10 @@
+TAG: qcreports_db-tr6839-2
+DATE: 07/15/2010
+STAFF: sc 
+CHANGES:
+1) MRK_McvAnnotByFeature.py
+2) MRK_GeneNoMcvAnnot.py
+
 TAG: qcreports_db-tr6839-1
 DATE: 07/13/2010
 STAFF: lec
